# siglip2-naflex

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  loc.yml  parity.yml
benches/: bench_dot_768.rs  bench_image_encode.rs  bench_naflex.rs  bench_text_encode.rs
ci/: miri_sb.sh  miri_tb.sh  sanitizer.sh
docs/superpowers/plans/: 2026-04-28-siglip2-implementation.md
docs/superpowers/specs/: 2026-04-27-siglip2-design.md
examples/: bench_ep.rs  bench_ep_text.rs  embed_keyframes.rs  index_and_search.rs
models/: MODELS.md
models/siglip2/: calibration.json
scripts/: generate_parity_fixtures.py  generate_synthetic_keyframes.py
src/: calibration.rs  embedding.rs  error.rs  image_enc.rs  image_view.rs  lib.rs  options.rs  session.rs  siglip2.rs  text_enc.rs
src/preproc/: mod.rs  naflex.rs
src/simd/: mod.rs  scalar.rs
src/simd/arch/: mod.rs  neon.rs  wasm_simd128.rs  x86_avx2.rs  x86_avx512.rs  x86_sse2.rs
tests/: integration.rs
tests/fixtures/: MODELS.sha256  README.md  text_embeddings.npy  text_prompts.json
tests/fixtures/embeddings/: 01_square_512.npy  02_landscape_640x480.npy  03_landscape_1280x720.npy  04_portrait_480x640.npy  05_portrait_720x1280.npy  06_wide_1920x720.npy  07_tall_360x1280.npy  08_extreme_wide_1600x400.npy  09_extreme_tall_400x1600.npy  10_small_224x224.npy  11_medium_900x600.npy  12_landscape_2k_2048x1080.npy
